Making AggregationGroupBy work with ColumnarDataSources.