@@ -12,9 +12,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.4.1</version>
+        <version>2.17</version>
         <configuration>
-          <argLine>-Xmx20g</argLine>
+          <argLine>  -Xms2g -Xmx20g  -XX:MaxNewSize=4096m  -XX:MaxPermSize=512m</argLine>
         </configuration>
       </plugin>
     </plugins>
